# monosc

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  monosc.sh
.cache/clangd/index/: main.cpp.011F9B28B7B7E7B8.idx
docs/example_json/: shader_compile.jsonc  shader_compile_lazy.jsonc
docs/lazy/: shader_compile.json
docs/lazy/GLSL/GLSL/: shader_compile.json
docs/lazy/GLSL/GLSL/shaders/write/: example.vert  shader.frag  this.comp
docs/lazy/GLSL/HLSL/: shader_compile.json
docs/lazy/GLSL/HLSL/shaders/read/: example.vert
docs/lazy/GLSL/MSL/: shader_compile.json
docs/lazy/GLSL/MSL/shaders/read/: shader.frag
docs/lazy/GLSL/MSL/shaders/write/: example.vert.msl  shader.frag.msl  this.comp.msl
docs/lazy/GLSL/SPV/shaders/write/: example.vert.spv
docs/lazy/HLSL/GLSL/: shader_compile.json
docs/lazy/HLSL/GLSL/shaders/write/: example.vert  shader.frag  this.comp
docs/lazy/HLSL/HLSL/: shader_compile.json
docs/lazy/HLSL/HLSL/shaders/read/: shader.frag.hlsl  this.comp.hlsl
docs/lazy/HLSL/HLSL/shaders/write/: example.vert.hlsl  shader.frag.hlsl  this.comp.hlsl
docs/lazy/HLSL/MSL/: shader_compile.json
docs/lazy/HLSL/MSL/shaders/read/: example.vert.hlsl
docs/lazy/HLSL/MSL/shaders/write/: example.vert.msl  shader.frag.msl  this.comp.msl
docs/lazy/HLSL/SPV/: shader_compile.json
docs/lazy/HLSL/SPV/shaders/write/: example.vert.hlsl.spv  shader.frag.hlsl.spv  this.comp.hlsl.spv
docs/lazy/MSL/GLSL/: shader_compile.json
docs/lazy/MSL/HLSL/: shader_compile.json
docs/lazy/MSL/MSL/: shader_compile.json
docs/lazy/MSL/SPV/: shader_compile.json
docs/lazy/SPV/GLSL/: shader_compile.json
docs/lazy/SPV/HLSL/: shader_compile.json
docs/lazy/SPV/MSL/: shader_compile.json
docs/lazy/SPV/SPV/: shader_compile.json
docs/lazy/shaders/write/: example.vert.spv  shader.frag.spv  this.comp.spv
docs/standard/: shader_compile.json
docs/standard/GLSL/GLSL/: shader_compile.json
docs/standard/GLSL/HLSL/: shader_compile.json
docs/standard/GLSL/MSL/: shader_compile.json
docs/standard/GLSL/SPV/read/comp/: that.comp  this.comp
docs/standard/GLSL/SPV/write/comp/: this.comp.spv
docs/standard/HLSL/GLSL/: shader_compile.json
docs/standard/HLSL/MSL/: shader_compile.json
docs/standard/HLSL/SPV/: shader_compile.json
docs/standard/MSL/GLSL/: shader_compile.json
docs/standard/MSL/HLSL/: shader_compile.json
docs/standard/MSL/MSL/: shader_compile.json
docs/standard/MSL/SPV/: shader_compile.json
docs/standard/SPV/GLSL/: shader_compile.json
docs/standard/SPV/HLSL/: shader_compile.json
docs/standard/SPV/MSL/: shader_compile.json
docs/standard/SPV/SPV/: shader_compile.json
docs/standard/write/comp/: that.comp.spv  this.comp.spv
docs/standard/write/frag/: .spv  fragment.frag.spv
docs/standard/write/vert/: example.vert.spv
src/: glslcomp.cpp  glslcomp.h  glslcomp.hpp  main.cpp  schema.h  schema.hpp  spvcomp.cpp  spvcomp.h  spvcomp.hpp
